--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,10 @@
 /* Empty. Add your own CSS if you like */
-
-/*.range{
-	width: 500px;
-    -ms-transform: rotate(-90deg); /* IE 9 */
-    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
-    transform: rotate(-90deg);
-  i.icon{
-      -ms-transform: rotate(90deg); /* IE 9 */
-    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-    transform: rotate(90deg);
-  }*/
+/*
+.scroll {
+    height: 100%;
+}*/
+ 
+#map {
+    width: 100%;
+    height: 70vh;
+}
